# filter-para

./: .gitignore  ARCHITECTURE_V3_STREAM_INLINE.md  BUGFIX_DOUBLE_THREAD.md  CHANGELOG_ASYNC.md  CLEANUP_DONE.txt  CMakeLists.txt  CONSEILS EXPERT.MD  Corrections.md  DEBUG_PARALLEL.md  DEBUG_PERF_REGRESSION.md  DOCS_CONSOLIDATED.txt  FIXES_APPLIED.md  IMPLEMENTATION.md  IMPLEMENTATION_HISTORY.md  IMPLEMENTATION_PLAN.md  OPTIMIZATIONS_APPLIED.md  OPTIMIZATIONS_DONE.md  OPTIMIZATION_ROADMAP.md  PARALLEL_ARCHITECTURE.md  PERFORMANCE_ANALYSIS.md  PROJECT_CONTEXT.md  PROMPT_FOR_EXPERT_AI.md  README.MD  README.md  STATUS.txt  WORKFLOW_COMPLET.md  benchmark_comparison.sh  build.sh  build_ultra.sh  check_files.sh  cleanup.sh  cleanup_markdown.sh  config.json  debug_traffic.sh  fast_test.sh  install_deps.sh  resultat_branche_develop.txt  setup_cloudlab_filter.sh  test_both_modes.sh  test_l7_filtering.sh  (+3 more)
docs/: ARCHITECTURE.md  PERFORMANCE_ANALYSIS.md
rules/: example_rules.json  example_rules_backup.json  test_block_injector.json  test_l7_rules.json
src/: main.cpp  main_ultra_fast.cpp  tiger_system.cpp  tiger_system.h  utils.cpp  utils.h
src/engine/: fast_packet_parser.h  fast_rule_engine.cpp  fast_rule_engine.h  fast_sequential_engine.cpp  fast_sequential_engine.cpp.backup  fast_sequential_engine.h  optimized_parallel_engine.cpp  optimized_parallel_engine.h  parsed_packet.h  rule_engine.cpp  rule_engine.h  stream_inline_engine.cpp  stream_inline_engine.h  successive_engine.cpp  successive_engine.h  true_parallel_engine.cpp  true_parallel_engine.h  ultra_fast_engine.cpp  ultra_fast_engine.h  ultra_parallel_engine.cpp  ultra_parallel_engine.h  worker_pool.cpp  worker_pool.h
src/handlers/: inline_packet_handler.cpp  inline_packet_handler.h  llhttp_parser.cpp  llhttp_parser.h  packet_handler.cpp  packet_handler.h  tcp_reassembler.cpp  tcp_reassembler.h
src/loaders/: rule_loader.cpp  rule_loader.h
src/utils/: iptables_manager.cpp  iptables_manager.h
